--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,34 @@
-name: CI/CD Pipeline
+# This workflow will build a Java project with Maven
+name: CI/CD pipeline to build Spring Boot application.
+
 
 on:
   push:
     branches:
       - main
-
-defaults:
-  run:
-    working-directory: User_Service
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
 
+    steps:
+      - uses: actions/checkout@v4
       - name: Set up JDK 17
         uses: actions/setup-java@v3
+
         with:
-          distribution: 'temurin'
           java-version: '17'
+          distribution: 'adopt'
+          server-id: docker.io
+          server-username: DOCKER_USERNAME
+          server-password: DOCKER_PASSWORD
 
-      - name: Build with Maven
-        run: mvn clean install
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+      - name: Login to Docker Hub
+        uses: docker login  -u sultan2023
         with:
-          name: user-service-app
-          path: target/*.jar
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & push service Discovery to Docker..
+        run: mvn package dockerfile:push --file Discovery/pom.xml
