--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,19 +16,17 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up JDK 17
         uses: actions/setup-java@v3
-
         with:
           java-version: '17'
           distribution: 'adopt'
           server-id: docker.io
           server-username: DOCKER_USERNAME
           server-password: DOCKER_PASSWORD
-
       - name: Login to Docker Hub
         uses: docker login  -u sultan2023
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build & push service UserService to Docker..
+      - name: Build & push service User_Service to Docker..
         run: mvn package dockerfile:push --file User_Service/pom.xml
