--- a/User_Service/pom.xml
+++ b/User_Service/pom.xml
@@ -61,6 +61,27 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!--Build and Push Java application to Docker.. -->
+            <plugin>
+            <groupId>com.spotify</groupId>
+            <artifactId>dockerfile-maven-plugin</artifactId>
+            <version>1.4.13</version>
+            <executions>
+                <execution>
+                    <id>default</id>
+                    <goals>
+                        <goal>build</goal>
+                        <goal>push</goal>
+                    </goals>
+                </execution>
+            </executions>
+                <configuration>
+                    <repository>user-service</repository>
+                    <tag>${project.version}</tag>
+                </configuration>
+            </plugin>
+
+
         </plugins>
     </build>
     <dependencyManagement>
