--- a/User_Service/pom.xml
+++ b/User_Service/pom.xml
@@ -79,6 +79,14 @@
                     <repository>user-service</repository>
                     <tag>${project.version}</tag>
                 </configuration>
+                <dependencies>
+                    <!-- To make this work on JDK 9+ -->
+                    <dependency>
+                        <groupId>javax.activation</groupId>
+                        <artifactId>javax.activation-api</artifactId>
+                        <version>1.2.0</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
 
