--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,15 +12,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check Out codebase
+      - uses: actions/checkout@v4
+
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '17'
+          distribution: 'temurin'
           server-id: docker.io
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
+
+      - name: Build with Maven
+        run: mvn clean build
 
       - name: Buid and Push Docker Image
         run: mvn package dockerfile:push --file User_Service/pom.xml
