--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           server-password: MAVEN_PASSWORD
 
       - name: Build with Maven
-        run: mvn clean build
+        run: mvn -f User_Service/pom.xml clean package
 
       - name: Buid and Push Docker Image
         run: mvn package dockerfile:push --file User_Service/pom.xml
