Changed the docker file for copy command

--- a/User_Service/Dockerfile
+++ b/User_Service/Dockerfile
@@ -4,7 +4,8 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the packaged Spring Boot jar file into the container
-COPY target/*.jar /app/app.jar
+COPY target/*.jar /app/
+
 # Expose the application port (change if needed)
 EXPOSE 8080
 # Command to run the application
