--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,12 @@ jobs:
       - name: Build with Maven
         run: mvn -f User_Service/pom.xml clean package
 
+      - name: Login to Docker Hub
+        uses: docker login  -u sultan2023
+        with :
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Buid and Push Docker Image
         run: mvn package dockerfile:push --file User_Service/pom.xml
         env:
