--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         run: mvn -f User_Service/pom.xml clean package
 
       - name: Login to Docker Hub
-        uses: docker login  -u sultan2023
+        uses : docker/login-action@v3
         with :
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
