--- a/User_Service/pom.xml
+++ b/User_Service/pom.xml
@@ -76,8 +76,10 @@
                 </execution>
             </executions>
                 <configuration>
-                    <repository>user_service</repository>
-                    <tag>${project.version}</tag>
+                    <repository>sultan2023/user_service</repository> <!-- FIX THIS -->
+                    <buildArgs>
+                        <JAR_FILE>target/User_Service-0.0.1-SNAPSHOT.jar</JAR_FILE>
+                    </buildArgs>
                 </configuration>
                 <dependencies>
                     <!-- To make this work on JDK 9+ -->
