--- a/User_Service/Dockerfile
+++ b/User_Service/Dockerfile
@@ -1,12 +1,12 @@
 # Use an official OpenJDK runtime as a parent image
 FROM openjdk:17-jdk-slim
 # Set the working directory inside the container
-WORKDIR /app
+ARG JAR_FILE=target/*.jar
 
 # Copy the packaged Spring Boot jar file into the container
-COPY target/*.jar /app/
-
+COPY ${JAR_FILE} User_Service-0.0.1-SNAPSHOT.jar-.jar
 # Expose the application port (change if needed)
 EXPOSE 8080
 # Command to run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java","-jar","ROOT .jar"]
+
