--- a/User_Service/Dockerfile
+++ b/User_Service/Dockerfile
@@ -4,7 +4,7 @@ FROM openjdk:17-jdk-slim
 ARG JAR_FILE=target/*.jar
 
 # Copy the packaged Spring Boot jar file into the container
-COPY ${JAR_FILE} User_Service-0.0.1-SNAPSHOT.jar-.jar
+COPY ${JAR_FILE} User_Service-1.0-SNAPSHOT.jar
 # Expose the application port (change if needed)
 EXPOSE 8080
 # Command to run the application
