--- a/User_Service/Dockerfile
+++ b/User_Service/Dockerfile
@@ -2,11 +2,9 @@
 FROM openjdk:17-jdk-slim
 # Set the working directory inside the container
 ARG JAR_FILE=target/*.jar
-
 # Copy the packaged Spring Boot jar file into the container
-COPY ${JAR_FILE} User_Service-1.0-SNAPSHOT.jar
+COPY ${JAR_FILE} user-service.jar
 # Expose the application port (change if needed)
 EXPOSE 8080
 # Command to run the application
 ENTRYPOINT ["java","-jar","ROOT .jar"]
-
