Changed the docker and POM

--- a/User_Service/Dockerfile
+++ b/User_Service/Dockerfile
@@ -1,10 +1,15 @@
 # Use an official OpenJDK runtime as a parent image
 FROM openjdk:17-alpine
+
 # Set the working directory inside the container
-ARG JAR_FILE=target/*.jar
+WORKDIR /app
+
 # Copy the packaged Spring Boot jar file into the container
-COPY ${JAR_FILE} user-service.jar
+ARG JAR_FILE=target/user-service.jar
+COPY ${JAR_FILE} app.jar
+
 # Expose the application port (change if needed)
 EXPOSE 8080
+
 # Command to run the application
-ENTRYPOINT ["java","-jar","ROOT .jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
