--- a/User_Service/pom.xml
+++ b/User_Service/pom.xml
@@ -42,7 +42,10 @@
         <artifactId>gson</artifactId>
         <version>2.8.6</version>
     </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
