--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,13 @@ jobs:
 
       - name: Install gke-gcloud-auth-plugin
         run: |
-            sudo apt-get update && sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
-            echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV   
+              sudo apt-get update
+              sudo apt-get install -y apt-transport-https ca-certificates gnupg
+              echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+              curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo tee /usr/share/keyrings/cloud.google.gpg >/dev/null
+              sudo apt-get update
+              sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
+              echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
 
       - name: Install gke-gcloud-auth-plugin
         run: |
